--- a/intex.html
+++ b/intex.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Сетевой Город. Образование</title>
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500&amp;subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
